# vllm-hb

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EXPERIMENTS.md  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
kernels/: kv_assign.cu  rms_norm.cu  rope.cu
src/: bench.rs  lib.rs  main.rs  model.rs  sampling.rs  server.rs  speculative.rs  tokenize.rs  types.rs  worker.rs
src/attention/: flash.rs  mod.rs  sdpa.rs
src/batch/: mod.rs
src/bench/: concurrent.rs  mod.rs  sequential.rs
src/engine/: config.rs  dtype.rs  kv_cache.rs  loader.rs  mod.rs
src/engine/arch/: gemma4.rs  gguf_llama.rs  llama.rs  llama_tp.rs  mixtral.rs  mod.rs  phi3.rs  qwen2.rs  qwen3.rs
src/engine/arch/models/: mod.rs  qwen2.rs  qwen3.rs
src/engine/quant/: compressed_tensors.rs  mod.rs
src/kernels/: kv_assign.rs  mod.rs  rms_norm.rs  rope.rs
src/parallel/: comm.rs  mod.rs  shard.rs  world.rs
src/sampling/: logprobs.rs  mod.rs  nucleus.rs  penalty.rs  stop.rs
src/scheduler/: block_manager.rs  mod.rs  policy.rs  prefix_cache.rs  sequence.rs
src/server/: handlers.rs  metrics.rs  mod.rs  sse.rs
src/tokenize/: mod.rs  template.rs
src/tools/: format.rs  mod.rs  parser.rs
src/types/: mod.rs  openai.rs  pipeline.rs
src/worker/: mod.rs
tests/: http_api.rs
tests/fixtures/: tokenizer.json
tests/fixtures/chatml/: tokenizer_config.json
tests/fixtures/llama3/: tokenizer_config.json
tests/fixtures/mistral/: tokenizer_config.json
