[package]
name = "vllm-hb"
version = "0.4.0"
edition = "2024"
description = "Hammingbound — vLLM-compatible inference runtime in pure Rust. Zero Python. Zero libtorch."
repository = "https://github.com/avarga1/vllm-hb"
license = "Apache-2.0"
readme = "README.md"

[[bin]]
name = "vllm-hb"
path = "src/main.rs"

# ── Feature flags ──────────────────────────────────────────────────────────────
[features]
default    = ["cuda"]
# CUDA compute via cudarc — required for GPU inference
cuda       = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
# NCCL all_reduce — replaces host-mediated CPU reduction for tensor parallelism.
# Requires NCCL runtime (libnccl.so) and the CUDA feature.
# Enable with: cargo build --release --features nccl
nccl       = ["cuda", "cudarc/nccl", "cudarc/f16"]
# Flash Attention 2 — sm_80+ (Ampere) only; ~2× attention speedup on long context
# Enable with: cargo build --release --features flash-attn
flash-attn = ["cuda", "candle-transformers/flash-attn"]
# BF16 weight dtype — native on A100+, emulated (slow) on V100
# This is a marker flag; logic lives in engine/dtype.rs
bf16       = []
# Prometheus /metrics endpoint
# Enable with: cargo build --release --features metrics
metrics    = []

[dependencies]
# HTTP server
axum          = { version = "0.8",  features = ["json", "macros"] }
tokio         = { version = "1",    features = ["full"] }
tower         = "0.5"
tower-http    = { version = "0.6",  features = ["cors", "trace"] }
tokio-stream  = "0.1"

# Serialization
serde         = { version = "1",    features = ["derive"] }
serde_json    = "1"

# Tokenizer — pure Rust, the canonical HuggingFace implementation
tokenizers    = { version = "0.21", features = ["http"] }

# ML compute — pure Rust → CUDA via cudarc, no libtorch, no C++ interop
# Note: cuda/flash-attn features are NOT listed here — they are activated
# through the [features] table so --no-default-features gives a CPU build.
candle-core         = "0.9"
candle-nn           = "0.9"
candle-transformers = "0.9"
# Explicit cudarc dep so the `nccl` and `f16` features can be toggled.
# Version must stay in sync with candle-core's transitive requirement.
cudarc              = { version = "0.17", optional = true }

# Sampling
rand          = "0.8"

# Observability
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client (used by bench subcommand)
reqwest       = { version = "0.12", features = ["json"] }
futures-core  = "0.3"

# Utilities
anyhow        = "1"
clap          = { version = "4",    features = ["derive"] }
uuid          = { version = "1",    features = ["v4"] }
parking_lot   = "0.12"
half          = { version = "2",    features = ["serde"] }
rayon         = "1"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = "symbols"
